base/qbt/qbt-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: qbt
  namespace: qbt
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: qbt
