base/qbt/qbt-ciliumnetworkpolicy.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: qbt
  namespace: qbt
spec:
  endpointSelector:
    matchLabels:
      app: qbt
  egress:
    - toCIDR:
      - 0.0.0.0/0
      toPorts:
      - ports:
        - port: "51820"
          protocol: UDP
    - toEndpoints:
      - matchLabels:
          "k8s:io.kubernetes.pod.namespace": kube-system
          "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
           - port: "53"
             protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - icmps:
      - fields:
        - type: 8
          family: IPv4
        - type: 128
          family: IPv6
